# krishnaik-document-parsers-rag

./: .gitignore  README.md  docling_document_parsing.ipynb  llamaparse_document_parsing.ipynb  pyproject.toml  unstructured_document_parsing.ipynb
sample_documents/: sample1.docx  sample1.pptx  sample1.xlsx
