[project]
name = "krishnaik-document-parsers-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "chromadb>=1.4.0",
    "docling==2.55.1",
    "docling-core[chunking]>=2.57.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-openai>=1.1.6",
    "langchain-unstructured>=1.0.0",
    "llama-cloud-services>=0.6.88",
    "llama-index>=0.9.48",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-llms-openai>=0.6.12",
    "llama-index-vector-stores-chroma>=0.5.3",
    "llama-parse>=0.6.88",
    "nest-asyncio>=1.6.0",
    "openai>=2.14.0",
    "openai-whisper>=20250625",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfminer-six>=20251107",
    "pi-heif>=1.1.1",
    "pillow>=11.3.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
    "sentence-transformers>=5.2.0",
    "transformers>=4.57.3",
    "unstructured-inference>=1.1.1",
    "unstructured[all-docs,local-inference]==0.18.15",
]
